package library.business;

public enum AuthorizationLevel {
    ADMIN,LIBRARIAN,BOTH;
}
