@startuml

title __BUSINESS's Class Diagram__\n

  package library {
    package library.business {
      class Address {
          - street : String
          - city : String
          - state : String
          - zip : String
          + Address()
          + Address()
          + getStreet()
          + getCity()
          + getState()
          + getZip()
      }
    }
  }
  

  package library {
    package library.business {
      class Admin {
          - books : List<Book>
          - libraryMembers : List<LibraryMember>
          + Admin()
          + getUser()
          + addNewLibrarianMember()
          - MemberIsExists()
          + addNewBookCopy()
      }
    }
  }
  

  package library {
    package library.business {
      class Author {
          - credentials : String
          - books : List<Book>
          + Author()
          + Author()
          + getCredentials()
          + setCredentials()
          + toString()
      }
    }
  }
  

  package library {
    package library.business {
      enum AuthorizationLevel {
        ADMIN
        LIBRARIAN
        BOTH
      }
    }
  }
  

  package library {
    package library.business {
      class Book {
          - ISBN : String
          - title : String
          - maxCheckoutLength : int
          - bookCopies : List<BookCopy>
          - authors : List<Author>
          + Book()
          + setAuthors()
          + getAuthors()
          + setBookCopies()
          + getISBN()
          + getTitle()
          + getMaxCheckoutLength()
          + getBookCopies()
          + getCountAvailableCopies()
          + toString()
      }
    }
  }
  

  package library {
    package library.business {
      class BookCopy {
          - copyNum : int
          - isAvailable : boolean
          + BookCopy()
          + getBook()
          + setAvailable()
          + getCopyNum()
          + getIsAvailable()
          + toString()
      }
    }
  }
  

  package library {
    package library.business {
      class CheckOutRecord {
          - checkOutRecordEntries : List<CheckOutRecordEntry>
          + CheckOutRecord()
          + getCheckOutRecordEntries()
      }
    }
  }
  

  package library {
    package library.business {
      class CheckOutRecordEntry {
          - checkoutDate : LocalDate
          - dueDate : LocalDate
          + CheckOutRecordEntry()
          + getCheckOutRecord()
          + getBookCopy()
          + getCheckoutDate()
          + getDueDate()
      }
    }
  }
  

  package library {
    package library.business {
      class LibraryMember {
          - memberId : String
          + LibraryMember()
          + setCheckOutRecord()
          + getMemberId()
          + getCheckOutRecord()
          + checkout()
      }
    }
  }
  

  package library {
    package library.business {
      class Person {
          - firstName : String
          - lastName : String
          - phone : String
          + Person()
          + Person()
          + getFirstName()
          + getLastName()
          + getPhone()
          + getAddress()
          + toString()
      }
    }
  }
  

  package library {
    package library.business {
      class SystemController {
          + findAdmin()
          + login()
          + getCheckoutEntries()
          + checkoutBook()
          + getAllBooks()
          + addBookCopy()
          + getAllMembers()
          + addMember()
          + checkBook()
          + getBookByIsbn()
          + addBook()
      }
    }
  }
  

  package library {
    package library.business {
      class User {
          - id : String
          - password : String
          + User()
          + User()
          + getAuthorizationLevel()
          + hashCode()
          + equals()
          + login()
      }
    }
  }
  

  Address -up-|> Serializable
  Admin -up-|> Serializable
  Admin -up-|> Person
  Admin o-- User : user
  Author -up-|> Serializable
  Author -up-|> Person
  Book -up-|> Serializable
  BookCopy -up-|> Serializable
  BookCopy o-- Book : book
  CheckOutRecord -up-|> Serializable
  CheckOutRecordEntry -up-|> Serializable
  CheckOutRecordEntry o-- CheckOutRecord : checkOutRecord
  CheckOutRecordEntry o-- BookCopy : bookCopy
  LibraryMember -up-|> Serializable
  LibraryMember -up-|> Person
  LibraryMember o-- CheckOutRecord : checkOutRecord
  Person -up-|> Serializable
  Person o-- Address : address
  SystemController o-- MembersDataAccess : membersDataAccess
  SystemController o-- BookDataAccess : bookDataAccess
  User -up-|> Serializable
  User o-- AuthorizationLevel : authorizationLevel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
